--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/voiceu-zuixin/fun-ui/issues"
   },
-  "homepage": "https://github.com/voiceu-zuixin/fun-ui#readme"
+  "homepage": "https://github.com/voiceu-zuixin/fun-ui#readme",
+  "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
+    "typescript": "^4.3.4",
+    "webpack": "4.29.6",
+    "webpack-cli": "3.2.3",
+    "webpack-dev-server": "^3.11.2"
+  }
 }
