--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/voiceu-zuixin/fun-ui#readme",
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
+    "html-webpack-plugin": "3.2.0",
     "typescript": "^4.3.4",
     "webpack": "4.29.6",
     "webpack-cli": "3.2.3",
