--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "fun-ui",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/lib/index",
+  "types": "dist/lib/index",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server",
-    "build": "webpack"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "awesome-typescript-loader": "^5.2.1",
+    "cross-env": "^7.0.3",
     "html-webpack-plugin": "3.2.0",
     "typescript": "^4.3.4",
     "webpack": "4.29.6",
