--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/lib/index",
   "types": "dist/lib/index",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.js --runInBand",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js"
   },
@@ -21,11 +21,20 @@
   },
   "homepage": "https://github.com/voiceu-zuixin/fun-ui#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@types/jest": "^26.0.23",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "@types/react-test-renderer": "^17.0.1",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-jest": "^27.0.6",
     "cross-env": "^7.0.3",
     "html-webpack-plugin": "3.2.0",
+    "jest": "^27.0.6",
+    "react-test-renderer": "^17.0.2",
+    "ts-jest": "^27.0.3",
+    "tslib": "^2.3.0",
     "typescript": "^4.3.4",
     "webpack": "4.29.6",
     "webpack-cli": "3.2.3",
