--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
         "strictNullChecks": true,
         // "suppressImplicitAnyIndexErrors": true,
         // https://github.com/Microsoft/TypeScript/issues/28762#issuecomment-443406607
-        "allowSyntheticDefaultImports": true,
+        // "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
         "noUnusedLocals": true
     },
     "include": [],
@@ -35,5 +36,5 @@
         "jest",
         "src/setupTests.ts",
         "*.js"
-    ]
+    ],
 }
