--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/react-test-renderer": "^17.0.1",
-    "awesome-typescript-loader": "^5.2.1",
+    "babel-core": "^6.26.3",
     "babel-jest": "^27.0.6",
     "cross-env": "^7.0.3",
     "html-webpack-plugin": "3.2.0",
     "jest": "^27.0.6",
     "react-test-renderer": "^17.0.2",
     "ts-jest": "^27.0.3",
+    "ts-loader": "8.2.0",
     "tslib": "^2.3.0",
     "typescript": "^4.3.4",
     "webpack": "4.29.6",
