--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,13 @@
         // https://github.com/Microsoft/TypeScript/issues/28762#issuecomment-443406607
         // "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
-        "noUnusedLocals": true
+        "noUnusedLocals": true,
+
     },
-    "include": [],
+    // ts-loader会报错，要把include入口处定义一下，咱们要转译的就是lib下的所有ts文件
+    "include": [
+        "lib/**/*"
+    ],
     "exclude": [
         "node_modules",
         "build",
