--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cross-env": "^7.0.3",
     "html-webpack-plugin": "3.2.0",
     "jest": "^27.0.6",
+    "prop-types": "^15.7.2",
     "react-test-renderer": "^17.0.2",
     "ts-jest": "^27.0.3",
     "ts-loader": "8.2.0",
