--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jest": "^27.0.6",
     "prop-types": "^15.7.2",
     "react-test-renderer": "^17.0.2",
+    "svg-sprite-loader": "^6.0.9",
     "ts-jest": "^27.0.3",
     "ts-loader": "8.2.0",
     "tslib": "^2.3.0",
