--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^27.0.6",
     "cross-env": "^7.0.3",
+    "css-loader": "1.0.0",
     "html-webpack-plugin": "3.2.0",
     "jest": "^27.0.6",
     "prop-types": "^15.7.2",
     "react-test-renderer": "^17.0.2",
+    "sass-loader": "7.1.0",
+    "style-loader": "0.23.1",
     "svg-sprite-loader": "^6.0.9",
     "ts-jest": "^27.0.3",
     "ts-loader": "8.2.0",
