--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "css-loader": "1.0.0",
     "html-webpack-plugin": "3.2.0",
     "jest": "^27.0.6",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react-test-renderer": "^17.0.2",
     "sass-loader": "7.1.0",
