--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-test-renderer": "^17.0.1",
     "babel-core": "^6.26.3",
     "babel-jest": "^27.0.6",
+    "babel-preset-react-app": "^6.1.0",
     "cross-env": "^7.0.3",
     "css-loader": "1.0.0",
     "html-webpack-plugin": "3.2.0",
