--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/react-test-renderer": "^17.0.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
     "babel-core": "^6.26.3",
     "babel-jest": "^27.0.6",
     "babel-preset-react-app": "^6.1.0",
     "cross-env": "^7.0.3",
     "css-loader": "1.0.0",
+    "enzyme": "^3.11.0",
     "html-webpack-plugin": "3.2.0",
     "jest": "^27.0.6",
+    "jsdom": "^16.6.0",
+    "jsdom-global": "3.0.2",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react-test-renderer": "^17.0.2",
