--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "cross-env NODE_ENV=test jest --config=jest.config.js --runInBand",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
-    "ci": "cross-env NODE_ENV=test JEST_JUNIT_OUTPUT=./test-results/jest/results.xml jest --config=jest.config.ci.js"
+    "ci": "cross-env NODE_ENV=test JEST_JUNIT_OUTPUT=./test-results/jest/results.xml jest --config=jest.config.js"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
     "enzyme": "^3.11.0",
     "html-webpack-plugin": "3.2.0",
     "jest": "^27.0.6",
+    "jest-junit": "^12.2.0",
     "jsdom": "^16.6.0",
     "jsdom-global": "3.0.2",
     "node-sass": "^4.14.1",
