--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,8 @@ jobs:
           root: .
           paths:
             - dist
+            - package.json
+            - README.md
   test:
     <<: *defaults
     steps:
@@ -41,6 +43,14 @@ jobs:
       - run: yarn ci
       - store_test_results:
           path: test-results
+
+  publish:
+      <<: *defaults
+    steps:
+      - attach_workspace:
+          at: .
+      - run: npm publish
+
 
 workflows:
   version: 2
@@ -53,3 +63,6 @@ workflows:
       - test:
           requires:
             - prepare
+      - publish:
+          requires:
+            - build
