--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,5 +67,5 @@ workflows:
           requires:
             - build
           filters:
-            tags:
+            tag:
               only: /^v[0-9]+(\.[0-9]+)*$/
