--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,5 +67,7 @@ workflows:
           requires:
             - build
           filters:
-            tag:
-              only: /^v[0-9]+(\.[0-9]+)*$/
+            branches:
+              ignore: /.*/
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*(-.*)*/
