--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "1.0.0",
     "enzyme": "^3.11.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "3.2.0",
     "jest": "^27.0.6",
     "jest-junit": "^5.2.0",
@@ -46,6 +47,7 @@
     "jsdom-global": "3.0.2",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
+    "raw-loader": "^4.0.2",
     "react-test-renderer": "^17.0.2",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
