--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jsdom": "^16.6.0",
     "jsdom-global": "3.0.2",
     "node-sass": "^4.14.1",
+    "prism-react-renderer": "^1.2.1",
     "prop-types": "^15.7.2",
     "raw-loader": "^4.0.2",
     "react-test-renderer": "^17.0.2",
