--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^27.0.6",
     "babel-preset-react-app": "^6.1.0",
+    "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "css-loader": "1.0.0",
     "enzyme": "^3.11.0",
