--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "css-loader": "1.0.0",
     "enzyme": "^3.11.0",
     "file-loader": "^6.2.0",
+    "glob": "^7.1.7",
     "html-webpack-plugin": "3.2.0",
     "jest": "^27.0.6",
     "jest-junit": "^5.2.0",
