--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-react": "^7.14.5",
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.11",
+    "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-dom": "^17.0.8",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-test-renderer": "^17.0.1",
@@ -51,6 +52,7 @@
     "prism-react-renderer": "^1.2.1",
     "prop-types": "^15.7.2",
     "raw-loader": "^4.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-test-renderer": "^17.0.2",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
